# NICA-Pro-Gem

./: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  App.tsx  README.md  REFACTOR_PLAN.md  constants.ts  docker-compose.yml  index.html  logs-backend.sh  logs-frontend.sh  package.json  start-dev.sh  types.ts
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: __init__.py  main.py
backend/app/agents/: base_agent.py  behavior_coach_agent.py  clinical_safety_agent.py  meal_log_agent.py  nutrition_plan_agent.py  orchestrator.py  registry.py
backend/app/api/routes/: __init__.py  profiles.py  tasks.py  ws.py
backend/app/core/: celery_app.py  config.py  database.py  logging.py  security.py
backend/app/models/: profile.py
backend/app/schemas/: plan.py  profile.py
backend/app/services/: gemini.py  profile_service.py
backend/app/tasks/: agent_tasks.py
backend/tests/: test_gemini_service.py  test_orchestrator.py  test_routes_tasks.py  test_tasks.py
components/: Button.tsx  Dashboard.tsx  FABMenu.tsx  FoodDiary.tsx  GestureHandler.tsx  HealthStats.tsx  LayoutWrapper.tsx  Navbar.tsx  NutriInput.tsx  NutriSelect.tsx  PlanGenerator.tsx  ProfileSetup.tsx  Settings.tsx  SmartMealInput.tsx  Toast.tsx  Toggle.tsx  WeeklyPlanView.tsx
contexts/: AnimationContext.tsx  LanguageContext.tsx
frontend/: .eslintrc.cjs  App.tsx  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
services/: geminiService.ts
utils/: i18n.ts
(+24 files in other folders)
